first commit changing wedding

--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -57,7 +57,7 @@ ul.nav.navbar-nav {
     &.active {
       padding: 0 15px;
       a {
-        border-bottom: 15px solid #FBC72D;
+        border-bottom: 15px solid rgba(#9ed4f5, 0.8);
 
         background-color: #fff;
       }
