--- a/app/views/home/_intro.html.erb
+++ b/app/views/home/_intro.html.erb
@@ -3,10 +3,11 @@
     <div class="row">
       <div class="col-lg-12">
         <%= flash_messages %>
-        <p class="logo"><%= image_tag('logo/logo.svg') %></p>
+        <!-- <p class="logo"><%= image_tag('logo/logo.svg') %></p> -->
+        <h1 class="home">RITA E ANTÓNIO</h1>
         <% if logged_in? %>
-          <h1 class="home">Porto</h1>
-          <p><%= l(Date.parse('12/11/2016'), format: :long) %></p>
+          <h2 class="home">Gião</h1>
+          <p><%= l(Date.parse('03/06/2017'), format: :long) %></p>
         <% end %>
 
         <p class="heart">
