--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -105,6 +105,14 @@ section {
   height: 100%;
   padding-top: 130px;
   text-align: center;
+  background-image: url(background/flower_vert.png), url(background/flower_horiz.png), linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0));
+  background-repeat: no-repeat, no-repeat, no-repeat;
+  background-position: left, bottom right, right;
+  background: -webkit-linear-gradient(left, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), -webkit-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), -webkit-linear-gradient(left, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), -webkit-linear-gradient(left, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0));
+  background: -o-linear-gradient(left, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), -webkit-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), -o-linear-gradient(left, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), -o-linear-gradient(left, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0));
+  background: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), -webkit-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0));
+
+
 
   p {
     font-size: 12px;
