--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -112,8 +112,6 @@ section {
   background: -o-linear-gradient(left, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), -webkit-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), -o-linear-gradient(left, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), -o-linear-gradient(left, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0));
   background: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), -webkit-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0));
 
-
-
   p {
     font-size: 12px;
     text-transform: uppercase;
@@ -222,4 +220,10 @@ section {
     font-family: "Merriweather Sans";
     font-size: 23px;
   }
+}
+
+.disabled_div {
+    pointer-events: none;
+    opacity: 0.4;
+    margin-bottom: 35px;
 }
