--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,5 @@ $input-color-placeholder: #525353;
 @import "nav";
 @import "home";
 @import "map";
-@import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
 @import url(https://fonts.googleapis.com/css?family=Merriweather+Sans:400,300);
-
+@import url('https://fonts.googleapis.com/css?family=Quicksand');
