--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -13,7 +13,7 @@ body {
   height: 100%;
   background-color: #F2F4F3;
 
-  font-family: 'Montserrat', sans-serif, Helvetica;
+  font-family: 'Quicksand', sans-serif, Helvetica;
 }
 
 html {
@@ -87,7 +87,7 @@ section {
 
   h1 {
     font-size: 30px;
-    font-family: "Montserrat";
+    font-family: "Quicksand", sans-serif;
     font-weight: bold;
     text-transform: uppercase;
     margin-bottom: 25px;
@@ -212,7 +212,7 @@ section {
   .acc_title {
     color: #2B4548;
     font-size: 10px;
-    font-family: "Montserrat";
+    font-family: 'Quicksand', sans-serif;
     text-transform: uppercase;
   }
 
