--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -18,5 +18,6 @@
   <%= render partial: 'home/contact' %>
 
   <!-- List Section -->
-  <%= render partial: 'home/list' %>
+  <!-- <%= render partial: 'home/list' %> -->
+
 <% end %>
