--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -95,7 +95,7 @@ section {
   }
 
   .tagline {
-    font-family: "Merryweather Sans";
+    font-family: "Quicksand", sans-serif;
     font-weight: 100;
     margin-bottom: 40px;
   }
