--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,13 @@
   <%#= render partial: 'home/story' %>
 
   <!-- Info Section -->
-  <%= render partial: 'home/info' %>
+  <!-- <%= render partial: 'home/info' %> -->
+
+  <!-- Map Church Section -->
+  <%= render partial: 'home/map_church' %>
+
+  <!-- Map Party Section -->
+  <%= render partial: 'home/map_party' %>
 
   <!-- Suggestions Section -->
   <%= render partial: 'home/our_suggestions' %>
