--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -57,22 +57,23 @@ ul.nav.navbar-nav {
     &.active {
       padding: 0 15px;
       a {
-        border-bottom: 15px solid rgba(#9ed4f5, 0.8);
+        border-bottom: 15px solid rgba(#2b68b6, 0.8);
+        //background-color: #fff;
       }
 
-      ul.dropdown-menu {
-        li {
-          a {
-            border-bottom: none;
-
-          }
-          &.active {
-            a {
-              border-bottom: 15px solid rgba(#9ed4f5, 0.8);
-            }
-          }
-        }
-      }
+      // ul.dropdown-menu {
+      //   li {
+      //     a {
+      //       border-bottom: none;
+      //
+      //     }
+      //     &.active {
+      //       a {
+      //         border-bottom: 15px solid rgba(#9ed4f5, 0.8);
+      //       }
+      //     }
+      //   }
+      // }
     }
   }
 
@@ -98,4 +99,8 @@ ul.nav.navbar-nav.navbar-right {
   li {
     padding-left: 28px;
   }
+}
+
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
+  background-color: #fff;
 }
