--- a/app/views/home/_map_party.html.erb
+++ b/app/views/home/_map_party.html.erb
@@ -1,7 +1,7 @@
 <section id="info" class="info-section">
   <div class="container">
     <div class="row">
-      <!-- <div class="col-lg-12"> -->
+      <div class="col-lg-12">
 
         <h1><%= t("map.header_party") %></h1>
 
@@ -9,6 +9,7 @@
           width="100%" height="450"
           frameborder="0" style="border:0" allowfullscreen></iframe>
 
+      </div>
     </div>
   </div>
 </section>
