--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -24,7 +24,11 @@
         <li>
           <a class="page-scroll" href="#info"><%= t('nav.info') %></a>
         </li>
-        <li class="dropdown">
+        <li>
+          <a class="page-scroll" href="#our-suggestions"><%= t('nav.suggestions') %></a>
+        </li>
+
+        <!-- <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= t('nav.suggestions') %> <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li>
@@ -34,15 +38,12 @@
               <a class="page-scroll" href="#suggestions"><%= t('nav.your_suggestions')%></a>
             </li>
           </ul>
-        </li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
+        </li> -->
         <li>
           <a class="page-scroll" href="#contact"><%= t('nav.contact') %></a>
         </li>
-        <!-- <li>
-          <a class="page-scroll" href="#list"><%= t('nav.list') %></a>
-        </li> -->
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
         <li>
           <% opp_locale = ["en", "pt"].reject!{|t| t == I18n.locale.to_s }.first %>
           <%= link_to opp_locale, locale_root_path(locale: opp_locale) %>
