change mariana/simao to rita/antonio

--- a/app/views/home/_our_suggestions.html.erb
+++ b/app/views/home/_our_suggestions.html.erb
@@ -6,7 +6,8 @@
         <h1><%= t("our_suggestions.header") %></h1>
         <p class="tagline"><%= t("our_suggestions.tagline") %></p>
       </div>
-      <div class="col-lg-3"></div>
+      <div class="col-lg-3">
+      </div>
     </div>
   </div>
 </section>
