--- a/app/views/home/_our_suggestions.html.erb
+++ b/app/views/home/_our_suggestions.html.erb
@@ -7,6 +7,10 @@
         <p class="tagline"><%= t("our_suggestions.tagline") %></p>
       </div>
       <div class="col-lg-3">
+        <p><a href="http://www.santanahotel.pt/">Hotel Santana</a></p>
+        <p>
+        <a href="https://www.facebook.com/pages/Estalagem-Brasao/358686730880852">Estalagem Brasão</a>
+        </p>
       </div>
     </div>
   </div>
