fix hotel brazao name

--- a/app/views/home/_our_suggestions.html.erb
+++ b/app/views/home/_our_suggestions.html.erb
@@ -5,13 +5,15 @@
       <div class="col-lg-6">
         <h1><%= t("our_suggestions.header") %></h1>
         <p class="tagline"><%= t("our_suggestions.tagline") %></p>
-      </div>
-      <div class="col-lg-3">
-        <p><a href="http://www.santanahotel.pt/">Hotel Santana</a></p>
         <p>
-        <a href="https://www.facebook.com/pages/Estalagem-Brasao/358686730880852">Estalagem Brasão</a>
+          <a href="http://www.santanahotel.pt/">Hotel Santana</a>
         </p>
+        <p>
+        <a href="http://www.hotelbrazao.pt/">Hotel Brazão</a>
+        </p>
+
       </div>
+      <div class="col-lg-3"></div>
     </div>
   </div>
 </section>
