open link in new page

--- a/app/views/home/_our_suggestions.html.erb
+++ b/app/views/home/_our_suggestions.html.erb
@@ -6,10 +6,10 @@
         <h1><%= t("our_suggestions.header") %></h1>
         <p class="tagline"><%= t("our_suggestions.tagline") %></p>
         <p>
-          <a href="http://www.santanahotel.pt/">Hotel Santana</a>
+          <a target="_blank" href="http://www.santanahotel.pt/">Hotel Santana</a>
         </p>
         <p>
-        <a href="http://www.hotelbrazao.pt/">Hotel Brazão</a>
+        <a target="_blank" href="http://www.hotelbrazao.pt/">Hotel Brazão</a>
         </p>
 
       </div>
