--- a/app/views/home/_map_party.html.erb
+++ b/app/views/home/_map_party.html.erb
@@ -4,9 +4,9 @@
       <div class="col-lg-12">
 
         <h1><%= t("map.header_party") %></h1>
-
+        <p>Casa de Gião</p>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2997.0185493799218!2d-8.680901085127745!3d41.308460079271505!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd2442dc28c00223%3A0x683df8335b8ac69f!2sR.+da+Estrada+Principal+1072%2C+Gi%C3%A3o%2C+Portugal!5e0!3m2!1spt-PT!2sus!4v1485022804384"
-          width="100%" height="450"
+          width="100%" height="400"
           frameborder="0" style="border:0" allowfullscreen></iframe>
 
       </div>
