--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -152,7 +152,8 @@ section {
       width: 75%;
     }
 
-    background-image: none;
+    background-image: url(asset-path('background/flower_vert.png'));
+    background-position: left;
   }
 }
 
