change flower in mobile update pngs to higher-res

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -152,8 +152,8 @@ section {
       width: 75%;
     }
 
-    background-image: url(asset-path('background/flower_vert.png'));
-    background-position: left;
+    background-image: url(asset-path('background/flower_horiz.png'));
+    background-position: bottom right;
   }
 }
 
