--- a/app/views/home/_our_suggestions.html.erb
+++ b/app/views/home/_our_suggestions.html.erb
@@ -11,7 +11,9 @@
         <p>
         <a target="_blank" href="http://www.hotelbrazao.pt/">Hotel Brazão</a>
         </p>
-
+        <p>
+        <a target="_blank" href="http://www.opohotel.com/pt/">OPO Hotel Aeroporto</a>
+        </p>
       </div>
       <div class="col-lg-3"></div>
     </div>
