--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -157,6 +157,24 @@ section {
   }
 }
 
+.image_map {
+  width: 100%;
+  height: 400px;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  margin-bottom: 20px;
+}
+.image_church {
+  @extend .image_map;
+  background-image: url(asset-path('maps/img_church.jpg'));
+}
+.image_party {
+  @extend .image_map;
+  background-image: url(asset-path('maps/img_party.png'));
+}
+
+
 .story-section {
   height: 100%;
   padding-top: 92px;
@@ -164,8 +182,9 @@ section {
 }
 
 .info-section {
-  height: 100%;
+  //height: 100%;
   padding-top: 52px;
+  padding-bottom: 52px;
   text-align: center;
 }
 
