--- a/app/views/home/_map_church.html.erb
+++ b/app/views/home/_map_church.html.erb
@@ -1,16 +1,21 @@
 <section id="info" class="info-section">
   <div class="container">
     <div class="row">
-      <div class="col-lg-12">
 
-        <h1><%= t("map.header_church") %></h1>
-        <p><%= t("map.header_church_desc") %></p>
+      <h1><%= t("map.header_church") %></h1>
+      <p><%= t("map.header_church_desc") %></p>
 
+      <div class="col-lg-6">
+        <div class="image_church">
+        </div>
+      </div>
+
+      <div class="col-lg-6">
         <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m11!1m3!1d1321.5006294697744!2d-8.676678534236002!3d41.32361240221101!2m2!1f0!2f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd24433b55f165b7%3A0xfedb451f5be391b9!2sCapela+de+Santo+Ov%C3%ADdio%2C+Vair%C3%A3o!5e1!3m2!1spt-PT!2spt!4v1485022022333"
           width="100%" height="400"
           frameborder="0" style="border:0" allowfullscreen></iframe>
-
       </div>
+
     </div>
   </div>
 </section>
